packages/neptune-css/src/less/chip.less
@import "~bootstrap/less/variables.less";

.chip {
  display: inline-flex;
  align-items: center;
  color: @brand-navy;
  background: @brand-smoke-plus-10;
  line-height: 0;
  margin: @spacer (@spacer / 2) 0 0;
  padding: 1px @spacer 0 (@spacer * 2);
  min-height: (@spacer * 4);
  border-radius: 100px;

  &.active {
    background: @brand-smoke;
  }

  .chip-remove {
    opacity: 0.6;
    margin-left: (@spacer * 2);
    height: (@spacer * 2);
    margin-top: -3px;
  }

  &.has-error {
    background: @brand-red;
    color: @component-active-color;
  }
}

